removed conditions stuff. neoforge cant be used due to Deferred Registry, and no point in replicating for something thats not super useful